--- a/Day-2/new-website/style.css
+++ b/Day-2/new-website/style.css
@@ -1,30 +1,38 @@
 #container {
     height: 100vh;
     display: grid;
-    grid-template-rows: 3fr 15fr 2fr;
+    grid-template-rows: 3fr 16fr 1fr;
 }
 
 #head {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    background-color: #028090;
+    background-color: #003554;
 }
 
 #main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    background-color: #f0f3bd;
+    background-color: #f5feff;
 }
 
 #nav{
     display: grid;
     grid-template-rows: repeat(4,1fr);
+    background-color: #006494;
+    justify-self: center;
+    align-self: center;
+}
+
+.navs{
+    border: 1px black solid;
+    font-size: 4em;
 }
 
 #table{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    background-color: #02c39a;
+    background-color: #00A6FB;
     justify-self: center;
     align-self: center;
     grid-gap: 10px;
@@ -41,8 +49,17 @@
     grid-template-rows: repeat(2,1fr);
 }
 #footer{
-    background-color: #05668d;
+    background-color: #051923;
 }
 p{
     padding: 5px;
+}
+
+.contents{
+    display: grid;
+    grid-template-rows: 1fr 3fr;
+    justify-self: center;
+    align-self: center;
+    justify-content: center;
+    align-content: center;
 }
